force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>Records assessments to determine whether an order is eligible for processing based on product and delivery availability.</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>SNO-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>