force-app/main/default/objects/Survey__c/fields/isDeliverable__c.field-meta.xml
<CustomField>
    <fullName>isDeliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether delivery is possible to the requested location.</description>
    <inlineHelpText>Indicates whether delivery is possible to the requested location.</inlineHelpText>
    <label>Deliverable</label>
    <type>Checkbox</type>
</CustomField>