force-app/main/default/objects/Survey__c/fields/requestId__c.field-meta.xml
<CustomField>
    <fullName>requestId__c</fullName>
    <description>Associates each Survey with its related Service Request Form for feedback tracking.</description>
    <inlineHelpText>Corresponding Service Request Form.</inlineHelpText>
    <label>Service Request</label>
    <referenceTo>RequestForm__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>